; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/helper/extr_tls-helper.c_pteTlsFree.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/helper/extr_tls-helper.c_pteTlsFree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@keysUsed = common dso_local global i64* null, align 8
@globalTlsLock = common dso_local global i32 0, align 4
@PTE_OS_OK = common dso_local global i32 0, align 4
@PTE_OS_GENERAL_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pteTlsFree(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i64*, i64** @keysUsed, align 8
  %5 = icmp ne i64* %4, null
  br i1 %5, label %6, label %17

6:                                                ; preds = %1
  %7 = load i32, i32* @globalTlsLock, align 4
  %8 = call i32 @pte_osMutexLock(i32 %7)
  %9 = load i64*, i64** @keysUsed, align 8
  %10 = load i32, i32* %2, align 4
  %11 = sub i32 %10, 1
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds i64, i64* %9, i64 %12
  store i64 0, i64* %13, align 8
  %14 = load i32, i32* @globalTlsLock, align 4
  %15 = call i32 @pte_osMutexUnlock(i32 %14)
  %16 = load i32, i32* @PTE_OS_OK, align 4
  store i32 %16, i32* %3, align 4
  br label %19

17:                                               ; preds = %1
  %18 = load i32, i32* @PTE_OS_GENERAL_FAILURE, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %17, %6
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @pte_osMutexLock(i32) #1

declare dso_local i32 @pte_osMutexUnlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
